# bio_cattaleya_scraper_v2fix

./: .eslintignore  .eslintrc.json  .gitignore  CHANGELOG.md  README.md  SECURITY.md  SESION_BSC.md  background.js  content.js  how eca39a1content.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  pyproject.toml  receptor_biocattaleya.py  receptor_biocattaleya_v2.py  sidepanel.html  tall exceljs
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
BSC_BUG_REGISTRY/: CHANGELOG.md  README.md  bitacora_29_abril_bio_cattaleya.md  bitacora_dia20_abril_bio_cattaleya.md  bitacora_dia21_abril_bio_cattaleya.md  bitacora_dia23_abril_bio_cattaleya.md  bitacora_dia24._abril_biocattaleya.md.md  bitacora_dia24_abril_bio_cattaleya.md.md  bug-report.yml  ci.yml  release.yml
bio_cattaleya_scraper_v2fix/: .env.example  .gitignore  _new_functions.js  background.js  content.js  eslint.config.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  receptor_biocattaleya.py  receptor_biocattaleya_v2.py  sidepanel.html  webpack.config.cjs  webpack.config.js
bio_cattaleya_scraper_v2fix/docs/: SECURITY_CHANGES.md  SECURITY_CHECKLIST.md
bio_cattaleya_scraper_v2fix/server/: .env.example  .env.production.example  package-lock.json  package.json  server.js
bio_cattaleya_scraper_v2fix/server/middleware/: auth.js
bio_cattaleya_scraper_v2fix/server/routes/: auth.js  license.js  notion.js
bio_cattaleya_scraper_v2fix/src/utils/: secureStorage.js  supabase.js
data/processed/: .gitkeep
data/raw/: .gitkeep
debug_server/: package-lock.json  package.json  server.js
docs/context/: context_v4_3.md
lib/: README.md
scripts/: setup_dev.sh
src/bio_cattaleya/: __init__.py  config.py
src/bio_cattaleya/parsers/: __init__.py  amazon.py  base.py  factory.py  taobao.py  tmall.py
src/bio_cattaleya/scraper/: __init__.py  browser.py  extractor.py  main.py
src/bio_cattaleya/storage/: __init__.py  base.py  notion.py
tests/: __init__.py
tests/fixtures/: amazon_sample.html  tmall_sample.html
tests/integration/: __init__.py  test_scraper_flow.py
tests/unit/: __init__.py  test_config.py  test_parsers.py
